Improve link contrast, fix unclickable collapsed statuses in Sleeping

--- a/app/javascript/skins/glitch/sleeping-dark/common.scss
+++ b/app/javascript/skins/glitch/sleeping-dark/common.scss
@@ -21,8 +21,8 @@ $ui-base-color: darken($clr-blue-grey-900, 12%);
 $ui-base-light-color: $clr-blue-grey-900;
 $ui-base-lighter-color: $clr-blue-grey-600;
 $ui-base-lightest-color: $clr-blue-grey-500;
-$ui-primary-color: $clr-blue-grey-400;
-$ui-secondary-color: $clr-blue-grey-500;
+$ui-primary-color: $clr-blue-grey-300;
+$ui-secondary-color: $clr-blue-grey-400;
 $ui-highlight-color: $clr-pink-a700;
 
 $primary: $clr-teal-700;
