--- a/app/javascript/skins/glitch/sleeping-light/common.scss
+++ b/app/javascript/skins/glitch/sleeping-light/common.scss
@@ -21,8 +21,8 @@ $ui-base-color: $clr-blue-grey-200;
 $ui-base-light-color: $clr-blue-grey-200;
 $ui-base-lighter-color: $clr-blue-grey-600;
 $ui-base-lightest-color: $clr-blue-grey-700;
-$ui-primary-color: $clr-blue-grey-600;
-$ui-secondary-color: $clr-blue-grey-400;
+$ui-primary-color: $clr-blue-grey-700;
+$ui-secondary-color: $clr-blue-grey-600;
 $ui-highlight-color: $clr-pink-500;
 
 $primary: $clr-teal-500;
