--- a/app/javascript/skins/glitch/sleeping/_base.scss
+++ b/app/javascript/skins/glitch/sleeping/_base.scss
@@ -137,7 +137,7 @@ $ui-base-dark-color: #000 !default;
   position: absolute;
   top: -47px;
   right: 0;
-  width: 80px;
+  min-width: 80px;
   @include contrast($accent);
 }
 
@@ -217,6 +217,7 @@ $ui-base-dark-color: #000 !default;
   top: 0; bottom: 0;
   left: 0; right: 0;
   background: linear-gradient(rgba($ui-base-color, 0), rgba($ui-base-color, 1));
+  pointer-events: none;
 }
 
 .status__visibility-icon.fa-globe {
